<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rese"
    android:orientation="vertical"
    tools:context=".MyResume">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/CheckOut"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/story"
        android:textColor="#fff"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/mylay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/myInstaimg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/instagram"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/myInstatext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ResumeText"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/myInstaID"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="Instagram"
            android:textSize="10sp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/mylay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/myLinkedInimg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:src="@drawable/linkedin" />

        <TextView
            android:id="@+id/myLinkedInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ResumeText2"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/myLinkedInID"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="Linked_In"
            android:textSize="10sp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mylay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/myFacebookimg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:src="@drawable/facebook" />

        <TextView
            android:id="@+id/myFacebookText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ResumeText3"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/myFacebookbtn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="Facebook"
            android:textSize="10sp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/myGoBack"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="Click to Go back"
            android:textSize="18sp" />

        <Button
            android:layout_weight="1"
            android:id="@+id/myWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="MY_WEBSITE"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>